测试添加数据