@@ -49,7 +49,29 @@
 	</dependency>
   </dependencies>
   
+  <properties>
+		<PermGen>1024m</PermGen>
+		<MaxPermGen>1024m</MaxPermGen>
+  </properties>
+  
   <build>
     <finalName>labelManager</finalName>
+    <plugins>
+    	<!-- tomcat插件配置 -->
+    	<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<argLine>-Xmx3g -XX:MaxPermSize=${MaxPermGen}
+						-XX:ReservedCodeCacheSize=512m</argLine>
+					<stopKey>stop</stopKey>
+					<uriEncoding>UTF-8</uriEncoding>
+					<path>/</path>
+					<port>8080</port>
+					<useTestClasspath>true</useTestClasspath>
+				</configuration>
+		</plugin>
+    </plugins>
   </build>
 </project>
